@@ -1,3 +1,7 @@
 [B]Version 1.1.162[/B]
 - AWM Netork - fix listing
 - camwhoresbay - fix playback
+- cumlouder - fix playback
+- justporn - fix site
+- porndig - fix thumbnails
+- porn1hu - fix site
